--- a/CorujaPresentation/Views/Admin/AdminCoruja.cshtml
+++ b/CorujaPresentation/Views/Admin/AdminCoruja.cshtml
@@ -4,25 +4,5 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
+<h2>AdminCoruja</h2>
 
-<section class="section section-gray">
-
-    <div class="container">
-        <h2 class="section-heading text-center">Gerenciamento de Contas e Usuários</h2>
-
-        <div class="row">
-            <div class="col-sm-12 col-md-12 alert-message alert-message-warning">
-
-                <img src="~/Content/CorujaImages/avatar2.png" alt="Coruja">
-                <h4>
-                    Admin
-                </h4>
-
-            </div>
-        </div>
-
-        <div class="cleaner_h30"></div>
-
-    </div>
-
-</section>
