--- a/CorujaPresentation/Views/Admin/SysUserDetails.cshtml
+++ b/CorujaPresentation/Views/Admin/SysUserDetails.cshtml
@@ -25,9 +25,39 @@
                 <div class="col-sm-12">
 
                     <div>
-                        
+
                         <hr />
                         <dl class="dl-horizontal">
+
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.IdUser)
+                            </dt>
+                            <dd>
+                                @Html.DisplayFor(model => model.IdUser)
+                            </dd>
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.RegisterDate)
+                            </dt>
+                            <dd>
+                                @Html.DisplayFor(model => model.RegisterDate)
+                            </dd>
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.UpdateDate)
+                            </dt>
+                            <dd>
+                                @Html.DisplayFor(model => model.UpdateDate)
+                            </dd>
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.IdUser)
+                            </dt>
+                            <dd>
+                                @Html.DisplayFor(model => model.IdUser)
+                            </dd>
+
                             <dt>
                                 @Html.DisplayNameFor(model => model.FirstName)
                             </dt>
@@ -163,7 +193,7 @@
                             <dd>
                                 @Html.DisplayFor(model => model.PasswordHash)
                             </dd>
-                                                       
+
 
                             <dt>
                                 @Html.DisplayNameFor(model => model.PhoneNumber)
@@ -173,13 +203,13 @@
                                 @Html.DisplayFor(model => model.PhoneNumber)
                             </dd>
 
-                                                        
+
 
                         </dl>
                     </div>
 
-                 </div>
-                       
+                </div>
+
             </div>
 
         </section>
