--- a/CorujaPresentation/Views/Admin/ListOfUsers.cshtml
+++ b/CorujaPresentation/Views/Admin/ListOfUsers.cshtml
@@ -1,51 +1,37 @@
-﻿@model IQueryable<CorujaPresentation.Models.RoleUsers>
+﻿@model IEnumerable<CorujaPresentation.Models.ApplicationUser>
+
 @{
-    ViewBag.Title = "ListOfUsers";
+    ViewBag.Title = "Lista de usuários";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<div>
-    <h2>Lista de Usuários</h2>
-</div>
-<div>
-    <table class="table">
+<h2>Lista de usuários</h2>
+
+<p>
+    @Html.ActionLink("Adicionar usuário", "AddUser")
+</p>
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.UserName)
+        </th>
+        <th>
+
+        </th>
+    </tr>
+
+    @foreach (var item in Model)
+    {
         <tr>
-            <th>
-                Email
-            </th>
-
-            <th>
-                Nome
-            </th>
-
-            <th>
-                Data de Cadastro
-            </th>
-
-
-            <th></th>
-
+            <td>
+                @Html.DisplayFor(modelItem => item.UserName)
+            </td>
+            <td>
+                @Html.ActionLink("Editar", "EditUser", new { id = item.Id }) |
+                @Html.ActionLink("Info", "UserDetails", new { id = item.Id }) |
+                @Html.ActionLink("Excluir", "DeleteUser", new { id = item.Id })
+            </td>
         </tr>
+    }
 
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UserMail)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UserName)
-                </td>
-
-                <td>
-                    @Html.DisplayFor(modelItem => item.RegisterDate)
-                </td>
-
-                <td>
-                    @Html.ActionLink("Info", "SysUserDetails", "Admin", new { IdUser = item.UserMail })
-                </td>
-
-            </tr>}
-
-    </table>
-</div>
+</table>
