--- a/CorujaPresentation/Views/Admin/ListOfUsers.cshtml
+++ b/CorujaPresentation/Views/Admin/ListOfUsers.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Lista de usuários</h2>
+<h2>@ViewBag.Title</h2>
 
 <p>
     @Html.ActionLink("Adicionar usuário", "AddUser")
