--- a/CorujaPresentation/Views/Admin/DeleteUser.cshtml
+++ b/CorujaPresentation/Views/Admin/DeleteUser.cshtml
@@ -5,12 +5,11 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Excluir usuário</h2>
+<h2>@ViewBag.Title</h2>
 
 <h3>Confirmar exclusão de usuário?</h3>
 <div>
-    <h4>User.</h4>
-    <hr />
+    
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.UserName)
