--- a/CorujaPresentation/Views/Admin/UserDetails.cshtml
+++ b/CorujaPresentation/Views/Admin/UserDetails.cshtml
@@ -6,14 +6,14 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Detalhes do usuário</h2>
+<h2>@ViewBag.Title</h2>
 
 <div>
-    <h4>User</h4>
+    
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.UserName)
+            UserName
         </dt>
         <dd>
             @Html.DisplayFor(model => model.UserName)
@@ -24,7 +24,7 @@
 @if (ViewBag.RoleNames.Count == 0)
 {
     <hr />
-    <p>No roles found for this user.</p>
+    <p>Nenhum perfil encontrado para esse usuário</p>
 }
 
 <table class="table">
@@ -40,7 +40,7 @@
 </table>
 <p>
     @Html.ActionLink("Editar", "EditUser", new { id = Model.Id }) |
-    @Html.ActionLink("Usuários", "ListOfUsers")
+    @Html.ActionLink("Lista de usuários", "ListOfUsers")
 </p>
 
 
