--- a/CorujaPresentation/Views/Conta/ShowMsg.cshtml
+++ b/CorujaPresentation/Views/Conta/ShowMsg.cshtml
@@ -1,7 +1,4 @@
 ﻿
-
-<h2>Mensagem</h2>
-
 @{
     ViewBag.Title = "Mensagem";
          Layout = "~/Views/Shared/_Layout.cshtml";
@@ -15,24 +12,23 @@
         <h2 class="section-heading text-center text-danger">Canal Coruja</h2>
 
         <div class="row">
-            <div class="col-sm-6 col-md-6">
-                <div class="alert-message alert-message-warning">
+            <div class="col-sm-12 col-md-12 alert-message alert-message-warning">
+              
+                
                     <img src="~/Content/CorujaImages/avatar2.png" alt="Coruja">
-                    <h4
-                        class="text-danger">@ViewBag.Title
-                    </h4>
+                    
                     @{
                         if (String.IsNullOrEmpty(ViewBag.errorMessage))
                         {
-                            <h3 class="text-danger">Erro ao processar a requisição da página</h3>
+                            <h5 class="text-danger">Erro ao processar a requisição da página</h5>
                         }
                         else
                         {
-                            <h3 class="text-danger">@ViewBag.errorMessage</h3>
+                            <h5 class="text-danger">@ViewBag.errorMessage</h5>
                         }
                     }
 
-                </div>
+              
 
             </div>
         </div>
