--- a/CorujaPresentation/Views/Shared/_LayoutAdmin.cshtml
+++ b/CorujaPresentation/Views/Shared/_LayoutAdmin.cshtml
@@ -244,14 +244,12 @@ desired effect
                 <!-- Sidebar user panel (optional) -->
                 <div class="user-panel">
                     <div class="pull-left image">
-                        <img src="~/Content/CorujaImages/avatar_92a6fd7367cc_96.png" class="img-circle" alt="User Image">
-                    </div>
-                    <div class="pull-left info">
-                        <p>@User.Identity.Name</p>
+                            <img src="~/Content/CorujaImages/avatar_92a6fd7367cc_96.png" class="img-circle" alt="User Image">
                     </div>
                 </div>
+
                 <!-- search form (Optional) -->
-                <form action="#" method="get" class="sidebar-form">
+                @*<form action="#" method="get" class="sidebar-form">
                     <div class="input-group">
                         <input type="text" name="q" class="form-control" placeholder="Search...">
                         <span class="input-group-btn">
@@ -260,14 +258,18 @@ desired effect
                             </button>
                         </span>
                     </div>
-                </form>
+                </form>*@
                 <!-- /.search form -->
                 <!-- Sidebar Menu -->
                 <ul class="sidebar-menu">
+                    <li class="glyphicon" style="color:white">&nbsp;@User.Identity.Name</li>
+
                     <li class="header">PAINEL</li>
                     
                     <!-- Optionally, you can add icons to the links -->
-                    <li class="active">@Html.ActionLink(" Home", "Index", "Home", null, new { @class = "glyphicon glyphicon-menu-right" })</li>
+                    <li>@Html.ActionLink(" Home", "Index", "Home", null, new { @class = "glyphicon glyphicon-menu-right" })</li>
+                    <li class="active">@Html.ActionLink(" Admin", "AdminCoruja", "Admin", null, new { @class = "glyphicon glyphicon-menu-right" })</li>
+
               
                      <li class="treeview">
                         <a href="#">
