--- a/CorujaPresentation/Views/Shared/_Layout.cshtml
+++ b/CorujaPresentation/Views/Shared/_Layout.cshtml
@@ -184,6 +184,7 @@
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/inputmask")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/coruja")
 
 
     @RenderSection("scripts", required: false)
