--- a/CorujaPresentation/Views/Conta/ConfirmacaoLembrarSenha.cshtml
+++ b/CorujaPresentation/Views/Conta/ConfirmacaoLembrarSenha.cshtml
@@ -13,14 +13,13 @@
 
 
         <div class="row">
-            <div class="col-sm-6 col-md-6">
-                <div class="alert-message alert-message-warning">
+            <div class="col-sm-6 col-md-6 alert-message">
+             
                     <img src="~/Content/CorujaImages/avatar2.png" alt="Coruja">
-                    <h4>
+                    <p>
                         Verifique seu Email para redefinir sua senha
-                    </h4>
+                    </p>
 
-                </div>
             </div>
         </div>
 
