--- a/CorujaPresentation/Views/Conta/Dados.cshtml
+++ b/CorujaPresentation/Views/Conta/Dados.cshtml
@@ -221,7 +221,7 @@
 
                             <div class="row cadSectionTitle">
                                 <div class="col-sm-12">
-                                    Email
+                                    Email de acesso
                                 </div>
                             </div>
 
