--- a/CorujaPresentation/Views/Conta/ConfirmacaoEmail.cshtml
+++ b/CorujaPresentation/Views/Conta/ConfirmacaoEmail.cshtml
@@ -12,14 +12,16 @@
 
 
         <div class="row">
-            <div class="col-sm-6 col-md-6">
-                <div class="alert-message alert-message-warning">
+            <div class="col-sm-6 col-md-6 alert-message">
+              
                     <img src="~/Content/CorujaImages/avatar2.png" alt="Coruja">
-                    <h4>
-                        Obrigado por confirmar seu Email @Html.ActionLink("Entrar no espaço Coruja", "Login", "Conta", routeValues: null, htmlAttributes: new { @class = "a"})
-                    </h4>
+                    <p>
+                        Obrigado por confirmar seu Email 
+                    </p>
+                    <p>
+                        @Html.ActionLink("Entrar no Canal Coruja", "Login", "Conta", routeValues: null, htmlAttributes: new { @class = "a" })
+                    </p>
 
-                </div>
             </div>
         </div>
 
