--- a/CorujaPresentation/Views/Conta/LembrarSenha.cshtml
+++ b/CorujaPresentation/Views/Conta/LembrarSenha.cshtml
@@ -12,7 +12,7 @@
         <h2 class="section-heading text-center">Conta Coruja</h2>
 
         <div class="row">
-            <div class="col-sm-12 col-md-12 alert-message alert-message-warning">
+            <div class="col-sm-12 col-md-12 alert-message">
                
              
                     <img src="~/Content/CorujaImages/avatar2.png" alt="Coruja">
