--- a/CorujaPresentation/Views/Shared/Error.cshtml
+++ b/CorujaPresentation/Views/Shared/Error.cshtml
@@ -21,7 +21,7 @@
 
         <div class="row">
             <div class="col-sm-6 col-md-6">
-                <div class="alert-message alert-message-warning">
+                <div class="">
                     <img src="~/Content/CorujaImages/avatar2.png" alt="Coruja">
                     <h4>
                         Erro ao processar requisição
