--- a/CorujaPresentation/Views/Admin/AddRole.cshtml
+++ b/CorujaPresentation/Views/Admin/AddRole.cshtml
@@ -1,6 +1,6 @@
 ﻿
 
-@model CorujaPresentation.Models.RoleViewModel
+@model CorujaPresentation.ViewModels.RoleViewModel
 
 @{
     ViewBag.Title = "Adicionar perfil";
