--- a/CorujaPresentation/Views/Admin/EditUser.cshtml
+++ b/CorujaPresentation/Views/Admin/EditUser.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model CorujaPresentation.Models.EditUserViewModel
+@model CorujaPresentation.ViewModels.EditUserViewModel
 
 @{
     ViewBag.Title = "Editar usuário";
