--- a/CorujaPresentation/Views/Conta/AlterarSenha.cshtml
+++ b/CorujaPresentation/Views/Conta/AlterarSenha.cshtml
@@ -1,4 +1,4 @@
-﻿@model CorujaPresentation.Models.ChangePasswordViewModel
+﻿@model CorujaPresentation.ViewModels.ChangePasswordViewModel
 @{
     ViewBag.Title = "AlterarSenha";
     Layout = "~/Views/Shared/_Layout.cshtml";
