--- a/CorujaPresentation/Views/Conta/Cadastro.cshtml
+++ b/CorujaPresentation/Views/Conta/Cadastro.cshtml
@@ -1,4 +1,4 @@
-﻿@model CorujaPresentation.Models.RegisterViewModel
+﻿@model CorujaPresentation.ViewModels.RegisterViewModel
 @{
     ViewBag.Title = "Cadastro";
 }
