--- a/CorujaPresentation/Views/Conta/Dados.cshtml
+++ b/CorujaPresentation/Views/Conta/Dados.cshtml
@@ -1,4 +1,4 @@
-﻿@model CorujaPresentation.Models.EditViewModel
+﻿@model CorujaPresentation.ViewModels.EditViewModel
 @{
     ViewBag.Title = "Edicao";
 }
