--- a/CorujaPresentation/Views/Conta/LembrarSenha.cshtml
+++ b/CorujaPresentation/Views/Conta/LembrarSenha.cshtml
@@ -1,4 +1,4 @@
-﻿@model CorujaPresentation.Models.ForgotPasswordViewModel
+﻿@model CorujaPresentation.ViewModels.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Esqueceu sua senha?";
 }
