--- a/CorujaPresentation/Views/Conta/ResetSenha.cshtml
+++ b/CorujaPresentation/Views/Conta/ResetSenha.cshtml
@@ -1,4 +1,4 @@
-﻿@model CorujaPresentation.Models.ResetPasswordViewModel
+﻿@model CorujaPresentation.ViewModels.ResetPasswordViewModel
 @{
     ViewBag.Title = "Redefinir senha";
 }
