--- a/CorujaPresentation/Views/Admin/AddUser.cshtml
+++ b/CorujaPresentation/Views/Admin/AddUser.cshtml
@@ -1,4 +1,4 @@
-﻿@model CorujaPresentation.Models.RegisterViewModel
+﻿@model CorujaPresentation.ViewModels.RegisterViewModel
 @{
     ViewBag.Title = "Adicionar usuário";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
