--- a/CorujaPresentation/Views/Shared/_Layout.cshtml
+++ b/CorujaPresentation/Views/Shared/_Layout.cshtml
@@ -61,8 +61,10 @@
                         <li>
                             <a class="dropdown-toggle header" data-toggle="dropdown" href="#">Produtos<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li>@Html.ActionLink("Coruja Escola", "Produtos", "Home", null, new { @class = "header" })</li>
-                                <li>@Html.ActionLink("Coruja Especialista", "Produtos", "Home", null, new { @class = "header" })</li>
+                                
+                                <li>@Html.ActionLink("Especialista", "Home", "Ambiente", new { Area = "Especialista" }, new { @class = "header" })</li>
+
+                                <li>@Html.ActionLink("Escola", "Produtos", "Home", null, new { @class = "header" })</li>
                                 <li>@Html.ActionLink("Cursos e Palestras", "Produtos", "Home", null, new { @class = "header" })</li>
                             </ul>
                         </li>
