--- a/CorujaPresentation/Views/Home/Testes.cshtml
+++ b/CorujaPresentation/Views/Home/Testes.cshtml
@@ -27,4 +27,16 @@
             </div>
         </div>
     </div>
+
+
+    <div class="col-md-4">
+        <p>Entre em contato com a Coruja e reporte o erro ocoriido</p>
+        <ul class="footer-posts list-unstyled">
+            <li class="footer-sprite">
+                <a href="mailto:contato@corujaedu.com.br?subject=[Fale%20com%20a%20Coruja]&amp;cco=christian@corujaedu.com.br" class="footer">contato@corujaedu.com.br</a>
+            </li>
+        </ul>
+    </div>
+
+
 </section>
